# iam-example

./: app.py  pyproject.toml
iam_example/: aws_support_example.py  iam_example_stack.py
lambda_src/: hello.py
tests/unit/: test_handler.py  test_iam_example_stack.py
